{
  "version": 4,
  "terraform_version": "0.12.31",
  "serial": 52,
  "lineage": "c17ca0e4-2621-2540-6f28-5780981b88ed",
  "resources": [
    {
      "module": "module.eipModule",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-58e6acb0",
            "domain": "vpc",
            "id": "eipalloc-c227bf43",
            "instance": "i-9c93afaab5c4d9cd7",
            "network_interface": "eni-0b3242e5",
            "public_dns": "ec2-127-161-109-74.us-east-2.compute.amazonaws.com",
            "public_ip": "127.161.109.74",
            "vpc": true
          },
          "dependencies": [
            "module.ec2Webmodule.aws_instance.myec2",
            "module.webSecurityGroupModule.aws_security_group.securitygroup"
          ]
        }
      ]
    },
    {
      "module": "module.ec2Webmodule",
      "mode": "managed",
      "type": "aws_instance",
      "name": "myec2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ee02acd56a52998e",
            "arn": "arn:aws:ec2:us-east-2::instance/i-9c93afaab5c4d9cd7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-9c93afaab5c4d9cd7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "None",
            "monitoring": false,
            "primary_network_interface_id": "eni-0b3242e5",
            "private_dns": "ip-10-209-27-127.ec2.internal",
            "private_ip": "10.209.27.127",
            "public_dns": "ec2-54-214-24-186.compute-1.amazonaws.com",
            "public_ip": "54.214.24.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-e8233f56",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "security_groups": [
              "Web Allow TCP"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-c188caac",
            "tags": {
              "name": "Web Server"
            },
            "tags_all": {
              "name": "Web Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-de06f006"
            ]
          },
          "dependencies": [
            "module.webSecurityGroupModule.aws_security_group.securitygroup"
          ]
        }
      ]
    },
    {
      "module": "module.ec2DBmodule",
      "mode": "managed",
      "type": "aws_instance",
      "name": "myec2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ee02acd56a52998e",
            "arn": "arn:aws:ec2:us-east-2::instance/i-882849dfcdd0493a3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-882849dfcdd0493a3",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "None",
            "monitoring": false,
            "primary_network_interface_id": "eni-32123d73",
            "private_dns": "ip-10-155-198-245.ec2.internal",
            "private_ip": "10.155.198.245",
            "public_dns": "ec2-54-214-124-65.compute-1.amazonaws.com",
            "public_ip": "54.214.124.65",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-d18e1b57",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "security_groups": [
              "DB Allow TCP"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-c188caac",
            "tags": {
              "name": "DB Server"
            },
            "tags_all": {
              "name": "DB Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-52a3810c"
            ]
          },
          "dependencies": [
            "module.dbSecurityGroupModule.aws_security_group.securitygroup"
          ]
        }
      ]
    },
    {
      "module": "module.webSecurityGroupModule",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "securitygroup",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:000000000000:security-group/sg-de06f006",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-de06f006",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Web Allow TCP",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": ""
          }
        }
      ]
    },
    {
      "module": "module.dbSecurityGroupModule",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "securitygroup",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:000000000000:security-group/sg-52a3810c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5471,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5471
              }
            ],
            "id": "sg-52a3810c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5471,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5471
              }
            ],
            "name": "DB Allow TCP",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": ""
          }
        }
      ]
    }
  ]
}